<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/white">

    <!-- Username Input -->

    <!-- Check Username Button -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btnCheckUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/check_username"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:backgroundTint="@color/black"
        android:layout_marginTop="10dp"/>

    <!-- Security Question (Initially Hidden) -->
    <TextView
        android:id="@+id/tvSecurityQuestion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/security_question"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:visibility="gone"
        android:layout_marginTop="20dp"/>

    <!-- Security Answer Input -->
    <EditText
        android:id="@+id/etSecurityAnswer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Enter your answer"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:layout_marginTop="10dp"/>

    <!-- New PIN Input -->
    <EditText
        android:id="@+id/etNewPin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_pin"
        android:maxLength="4"
        android:inputType="numberPassword"
        android:padding="12dp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:layout_marginTop="10dp"/>

    <!-- Reset PIN Button -->
    <Button
        android:id="@+id/btnResetPin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_pin"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:visibility="gone"
        android:layout_marginTop="20dp"/>
</LinearLayout>