<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg4">

    <!-- Lock Icon -->
    <ImageView
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:src="@drawable/protection"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/lock_icon" />


        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="16dp"

            app:cardBackgroundColor="#405D5C5C"
            android:padding="8dp"
            >

        <LinearLayout
        android:layout_width="350dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

<EditText
    android:id="@+id/etUsername"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="no"
    android:textAlignment="center"
    android:hint="@string/enter_username"
    android:textColorHint="#E6D6D6"
    android:textColor="@color/white"
    android:textStyle="bold|italic"
    android:inputType="text"
    android:layout_margin="4dp"
    />

<EditText
    android:id="@+id/etPin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:autofillHints="no"
    android:maxLength="4"
    android:textColor="@color/white"
    android:textStyle="bold|italic"
    android:textColorHint="#D9D8D8"
    android:hint="@string/enter_4_digit_pin"
    android:textAlignment="center"
    android:inputType="numberPassword" />

<EditText
    android:id="@+id/etConfirmPin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:importantForAutofill="no"
    android:maxLength="4"
    android:textColor="@color/white"
    android:textStyle="bold|italic"
    android:textColorHint="#D9D8D8"
    android:hint="@string/confirm_4_digit_pin"
    android:textAlignment="center"
    android:inputType="numberPassword" />

            <Spinner
                android:id="@+id/spinnerSecurityQuestion"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textStyle="bold|italic"
                android:spinnerMode="dropdown" />

<EditText
    android:id="@+id/etSecurityAnswer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:importantForAutofill="no"
    android:inputType="text"
    android:textAlignment="center"
    android:layout_margin="4dp"
    android:textColor="@color/white"
    android:textStyle="bold|italic"
    android:textColorHint="#D9D8D8"
    android:hint="@string/enter_security_answer" />

<Button
    android:id="@+id/btnSetPin"
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#521A23"
    android:text="Sign up" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>